name:                 bassbull
version:              0.1.0.0
synopsis:             Processiing some csv data
description:          Baseball data analysis
homepage:             https://github.com/beatsbury/bassbull#readme
license:              BSD3
license-file:         LICENSE
author:               Sergei Semerikov
maintainer:           ss@beatsbury.com
copyright:            2019, Sergei Semerikov
category:             Data
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

executable bassbull
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      bytestring,
                      vector,
                      cassava
